force-app/main/default/objects/ssot__LearnerProfile__dlm/fields/ssot__AcademicLevel__c.field-meta.xml
<CustomField>
    <fullName>ssot__AcademicLevel__c</fullName>
    <label>Academic Level</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AcademicLevel</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>