force-app/main/default/objects/ssot__LearnerProfile__dlm/fields/ssot__AcademicTermEnrollmentId__c.field-meta.xml
<CustomField>
    <fullName>ssot__AcademicTermEnrollmentId__c</fullName>
    <label>Academic Term Enrollment</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AcademicTermEnrollmentId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>