force-app/main/default/objects/ssot__LearnerProfile__dlm/fields/ssot__College__c.field-meta.xml
<CustomField>
    <fullName>ssot__College__c</fullName>
    <label>College</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>College</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>