force-app/main/default/objects/ssot__LearnerProfile__dlm/fields/ssot__Concentration__c.field-meta.xml
<CustomField>
    <fullName>ssot__Concentration__c</fullName>
    <label>Concentration</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>Concentration</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>