force-app/main/default/objects/ssot__LearnerProfile__dlm/fields/ssot__ContactProfileId__c.field-meta.xml
<CustomField>
    <fullName>ssot__ContactProfileId__c</fullName>
    <label>Contact Profile</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ContactProfileId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>