force-app/main/default/objects/ssot__LearnerProfile__dlm/fields/ssot__EnrollmentReason__c.field-meta.xml
<CustomField>
    <fullName>ssot__EnrollmentReason__c</fullName>
    <label>Enrollment Reason</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>EnrollmentReason</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>