force-app/main/default/objects/ssot__LearnerProfile__dlm/fields/ssot__HasThirdPartyFerpa__c.field-meta.xml
<CustomField>
    <fullName>ssot__HasThirdPartyFerpa__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Third-Party FERPA</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>HasThirdPartyFerpa</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Checkbox</type>
</CustomField>