force-app/main/default/objects/ssot__LearnerProfile__dlm/fields/ssot__InstructionMode__c.field-meta.xml
<CustomField>
    <fullName>ssot__InstructionMode__c</fullName>
    <label>Instruction Mode</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>InstructionMode</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>