force-app/main/default/objects/ssot__LearnerProfile__dlm/fields/ssot__IsAthlete__c.field-meta.xml
<CustomField>
    <fullName>ssot__IsAthlete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Athlete</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IsAthlete</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Checkbox</type>
</CustomField>