force-app/main/default/objects/ssot__LearnerProfile__dlm/fields/ssot__IsEnrolledInCareerServices__c.field-meta.xml
<CustomField>
    <fullName>ssot__IsEnrolledInCareerServices__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enrolled In Career Services</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IsEnrolledInCareerServices</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Checkbox</type>
</CustomField>