force-app/main/default/objects/ssot__LearnerProfile__dlm/fields/ssot__IsEnrolledInDualDegree__c.field-meta.xml
<CustomField>
    <fullName>ssot__IsEnrolledInDualDegree__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dual Degree</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IsEnrolledInDualDegree</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Checkbox</type>
</CustomField>