force-app/main/default/objects/ssot__LearnerProfile__dlm/fields/ssot__IsPellGrantEligible__c.field-meta.xml
<CustomField>
    <fullName>ssot__IsPellGrantEligible__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pell Grant Eligible</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IsPellGrantEligible</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Checkbox</type>
</CustomField>