force-app/main/default/objects/ssot__LearnerProfile__dlm/fields/ssot__Major__c.field-meta.xml
<CustomField>
    <fullName>ssot__Major__c</fullName>
    <label>Major</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>Major</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>