force-app/main/default/objects/ssot__LearnerProfile__dlm/fields/ssot__MajorDeclarationTerm__c.field-meta.xml
<CustomField>
    <fullName>ssot__MajorDeclarationTerm__c</fullName>
    <label>Major Declaration Term</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>MajorDeclarationTerm</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>