force-app/main/default/objects/ssot__LearnerProfile__dlm/fields/ssot__MatriculationTerm__c.field-meta.xml
<CustomField>
    <fullName>ssot__MatriculationTerm__c</fullName>
    <label>Matriculation Term</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>MatriculationTerm</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>