force-app/main/default/objects/ssot__LearnerProfile__dlm/fields/ssot__PrimaryAdvisorId__c.field-meta.xml
<CustomField>
    <fullName>ssot__PrimaryAdvisorId__c</fullName>
    <label>Primary Advisor</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PrimaryAdvisorId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>