force-app/main/default/objects/ssot__LearnerProfile__dlm/fields/ssot__PrimaryAdvisorName__c.field-meta.xml
<CustomField>
    <fullName>ssot__PrimaryAdvisorName__c</fullName>
    <label>Primary Advisor Name</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PrimaryAdvisorName</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>