force-app/main/default/objects/ssot__LearnerProfile__dlm/fields/ssot__rel_1731040500261_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1731040500261_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LearnerProfile_ContactId_map_Individ_rel</label>
    <referenceTo>ssot__Individual__dlm</referenceTo>
    <relationshipLabel>LearnerProfile_ContactId_map_Individ_rel</relationshipLabel>
    <relationshipName>rel_1731040500261_end</relationshipName>
    <type>Lookup</type>
</CustomField>