force-app/main/default/objects/ssot__LearnerProfile__dlm/fields/ssot__rel_1731041076697_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1731041076697_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LearnerProfile_PrimaryAdvisorId_map__rel</label>
    <referenceTo>ssot__User__dlm</referenceTo>
    <relationshipLabel>LearnerProfile_PrimaryAdvisorId_map__rel</relationshipLabel>
    <relationshipName>rel_1731041076697_end</relationshipName>
    <type>Lookup</type>
</CustomField>