force-app/main/default/objects/ssot__LearnerProfile__dlm/fields/ssot__SecondMajor__c.field-meta.xml
<CustomField>
    <fullName>ssot__SecondMajor__c</fullName>
    <label>Second Major</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>SecondMajor</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>